--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-node": "^4.1.0",
