--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.7.8",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
